--- a/index.html
+++ b/index.html
@@ -11,28 +11,30 @@
 <body>
     <main class="center">
         <section class="images-nature">
-            <img src="./imgs/nature-1.jpeg" alt="nature-1" title="nature-1">
-            <img src="./imgs/nature-2.jpeg" alt="nature-2" title="nature-2">
-            <img src="./imgs/nature-3.jpeg" alt="nature-3" title="nature-3">
+            <img class="img" src="./imgs/nature-1.jpeg" alt="nature-1" title="nature-1">
+            <img class="img" src="./imgs/nature-2.jpeg" alt="nature-2" title="nature-2">
+            <img class="img" src="./imgs/nature-3.jpeg" alt="nature-3" title="nature-3">
         </section>
         <section class="images-city">
-            <img src="./imgs/city-1.jpeg" alt="city-1" title="city-1">
-            <img src="./imgs/city-2.jpeg" alt="city-2" title="city-2">
-            <img src="./imgs/city-3.jpeg" alt="city-3" title="city-3">
-            <img src="./imgs/city-4.jpeg" alt="city-4" title="city-4">
-            <img src="./imgs/city-5.jpeg" alt="city-5" title="city-5">
+            <img class="img" src="./imgs/city-1.jpeg" alt="city-1" title="city-1">
+            <img class="img" src="./imgs/city-2.jpeg" alt="city-2" title="city-2">
+            <img class="img" src="./imgs/city-3.jpeg" alt="city-3" title="city-3">
+            <img class="img" src="./imgs/city-4.jpeg" alt="city-4" title="city-4">
+            <img class="img" src="./imgs/city-5.jpeg" alt="city-5" title="city-5">
         </section>
         <!-- MODAL -->
-        <!-- <div class="modal">
-            <button class="close">
-                <i class="material-symbols-outlined">close</i>
-            </button>
+        <div class="modal">
+            <div class="close-section">
+                <button class="close-btn">
+                    <i class="material-symbols-outlined">close</i>
+                </button>
+            </div>
             <div class="image-modal">
-                <button class="back">
+                <button class="arrow back">
                     <i class="material-symbols-outlined">arrow_back_ios</i>
                 </button>
                 <img class="image-content" src="./imgs/nature-1.jpeg" alt="nature-1">
-                <button class="forward">
+                <button class="arrow forward">
                     <i class="material-symbols-outlined">arrow_forward_ios</i>
                 </button>
             </div>
@@ -44,7 +46,7 @@
                 <img src="./imgs/nature-2.jpeg" alt="nature-2" title="nature-2">
                 <img src="./imgs/nature-3.jpeg" alt="nature-3" title="nature-3">
             </div>
-        </div> -->
+        </div>
     </main>
     <script src="app.js"></script>
 </body>
