--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
     <main class="center">
         <section class="images-nature">
-            <img class="img" src="./imgs/nature-1.jpeg" alt="nature-1" title="nature-1">
-            <img class="img" src="./imgs/nature-2.jpeg" alt="nature-2" title="nature-2">
-            <img class="img" src="./imgs/nature-3.jpeg" alt="nature-3" title="nature-3">
+            <img class="img" src="./imgs/nature-1.jpeg" alt="nature-1" title="nature-1" data-id="1">
+            <img class="img" src="./imgs/nature-2.jpeg" alt="nature-2" title="nature-2" data-id="2">
+            <img class="img" src="./imgs/nature-3.jpeg" alt="nature-3" title="nature-3" data-id="3">
         </section>
         <section class="images-city">
-            <img class="img" src="./imgs/city-1.jpeg" alt="city-1" title="city-1">
-            <img class="img" src="./imgs/city-2.jpeg" alt="city-2" title="city-2">
-            <img class="img" src="./imgs/city-3.jpeg" alt="city-3" title="city-3">
-            <img class="img" src="./imgs/city-4.jpeg" alt="city-4" title="city-4">
-            <img class="img" src="./imgs/city-5.jpeg" alt="city-5" title="city-5">
+            <img class="img" src="./imgs/city-1.jpeg" alt="city-1" title="city-1" data-id="1">
+            <img class="img" src="./imgs/city-2.jpeg" alt="city-2" title="city-2" data-id="2">
+            <img class="img" src="./imgs/city-3.jpeg" alt="city-3" title="city-3" data-id="3">
+            <img class="img" src="./imgs/city-4.jpeg" alt="city-4" title="city-4" data-id="4">
+            <img class="img" src="./imgs/city-5.jpeg" alt="city-5" title="city-5" data-id="5">
         </section>
         <!-- MODAL -->
         <div class="modal">
@@ -42,9 +42,9 @@
                 <h3>nature-1</h3>
             </div>
             <div class="images-list">
-                <img src="./imgs/nature-1.jpeg" alt="nature-1" title="nature-1">
-                <img src="./imgs/nature-2.jpeg" alt="nature-2" title="nature-2">
-                <img src="./imgs/nature-3.jpeg" alt="nature-3" title="nature-3">
+                <!-- <img class="imageM" src="./imgs/nature-1.jpeg" alt="nature-1" title="nature-1">
+                <img class="imageM" src="./imgs/nature-2.jpeg" alt="nature-2" title="nature-2">
+                <img class="imageM" src="./imgs/nature-3.jpeg" alt="nature-3" title="nature-3"> -->
             </div>
         </div>
     </main>
