--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </button>
             </div>
             <div class="title">
-                <h3>nature-1</h3>
+                <h3 class="titleMain">nature-1</h3>
             </div>
             <div class="images-list">
                 <!-- <img class="imageM" src="./imgs/nature-1.jpeg" alt="nature-1" title="nature-1">
