--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <button class="arrow back">
                     <i class="material-symbols-outlined">arrow_back_ios</i>
                 </button>
-                <img class="image-content" src="./imgs/nature-1.jpeg" alt="nature-1">
+                <img class="image-content" src="./imgs/nature-1.jpeg">
                 <button class="arrow forward">
                     <i class="material-symbols-outlined">arrow_forward_ios</i>
                 </button>
